--- a/browserViews/index.pug
+++ b/browserViews/index.pug
@@ -1,30 +1,40 @@
-html(lang='fr', xmlns:v-on="http://www.w3.org/1999/xhtml")
-	head
-		meta(charset='UFT-8')
-		title Z-ToolBox
-		meta(http-equiv="Content-Security-Policy", content="default-src 'none'; script-src 'self' 'unsafe-eval'; object-src 'none'; style-src 'self'; img-src 'self'; media-src 'self'; frame-src 'self'; font-src 'self'; connect-src 'none'")
+extends _layout
 
-		link(rel='stylesheet', href='lib/codemirror/lib/codemirror.css')
-		link(rel='stylesheet', href='lib/codemirror/theme/monokai.css')
 
-		script(src='lib/codemirror/lib/codemirror.js')
-		script(src='lib/codemirror/mode/htmlmixed/htmlmixed.js')
-		script(src='lib/codemirror/mode/javascript/javascript.js')
-		script(src='lib/codemirror/mode/css/css.js')
-		script(src='lib/codemirror/mode/xml/xml.js')
 
-		link(rel='stylesheet', href='css/index.css')
-		script(src='js/index.js')
+block head
+	meta(http-equiv="Content-Security-Policy", content="default-src 'none'; script-src 'self' 'unsafe-eval'; object-src 'none'; style-src 'self'; img-src 'self'; media-src 'self'; frame-src 'self'; font-src 'self'; connect-src 'none'")
 
-	body
-		main
-			p
-				button(v-on:click='onStreamLink') Ouvrir streamlink
-				button(v-on:click='reloadIframe') Run code !
+block head-css
+	link(rel='stylesheet', href='lib/codemirror/lib/codemirror.css')
+	link(rel='stylesheet', href='lib/codemirror/theme/monokai.css')
 
-			p
-				// All of the Node.js APIs are available in this renderer process.
-				| We are using Node.js {{versions.node}}, Chromium {{versions.chrome}}, and Electron {{versions.electron}}.
+block head-js
+	script(src='lib/codemirror/lib/codemirror.js')
+	script(src='lib/codemirror/mode/htmlmixed/htmlmixed.js')
+	script(src='lib/codemirror/mode/javascript/javascript.js')
+	script(src='lib/codemirror/mode/css/css.js')
+	script(src='lib/codemirror/mode/xml/xml.js')
 
-			div#codeInputs
-			iframe#iframe(ref='iframe', sandbox='allow-same-origin allow-scripts', src='iframe.html')
+
+
+block append head-css
+	link(rel='stylesheet', href='css/index.css')
+
+block append head-js
+	script(src='js/index.js')
+
+
+
+
+block main
+	p(xmlns:v-on="http://www.w3.org/1999/xhtml")
+		button(v-on:click='onStreamLink') Ouvrir streamlink
+		button(v-on:click='reloadIframe') Run code !
+
+	p
+		// All of the Node.js APIs are available in this renderer process.
+		| We are using Node.js {{versions.node}}, Chromium {{versions.chrome}}, and Electron {{versions.electron}}.
+
+	div#codeInputs
+	iframe#iframe(ref='iframe', sandbox='allow-same-origin allow-scripts', src='iframe.html')
