--- a/browserViews/iframe.pug
+++ b/browserViews/iframe.pug
@@ -6,4 +6,7 @@ block title
 block head
 	meta(http-equiv='Content-Security-Policy', content="default-src 'none'; script-src 'self' https://unpkg.com/; object-src 'none'; style-src 'self' 'unsafe-inline'; img-src 'self'; media-src 'self'; frame-src 'self'; font-src 'self'; connect-src 'none'")
 
+block head-js
+	script(src='js/iframe.js')
+
 block body
