--- a/browserViews/shortcuts.pug
+++ b/browserViews/shortcuts.pug
@@ -1,7 +1,7 @@
 extends _layout
 
 block head
-	meta(http-equiv="Content-Security-Policy", content="default-src 'none'; script-src 'self' 'unsafe-eval'; object-src 'none'; style-src 'self'; img-src 'self'; media-src 'self'; frame-src 'self'; font-src 'self'; connect-src 'none'")
+	meta(http-equiv="Content-Security-Policy", content="default-src 'none'; script-src 'self' 'unsafe-eval'; object-src 'none'; style-src 'self'; img-src 'self' data:; media-src 'self'; frame-src 'self'; font-src 'self'; connect-src 'none'")
 
 block head-css
 	link(rel='stylesheet', href='css/reset.css')
@@ -18,4 +18,5 @@ block body
 		section
 			ul.list
 				li(v-for='(item, index) in filteredList', :key="item.path", :tabindex='index + 1', v-on:keyup.enter='onItemTrigger(item)', v-on:click='onItemTrigger(item)')
+					img(:src="item.fileIcon", v-if="typeof item.fileIcon === 'string' && item.fileIcon.length > 0")
 					| {{ item.filename }}
