--- a/browserViews/css/index.sass
+++ b/browserViews/css/index.sass
@@ -1,8 +1,8 @@
-#codeInputs
-	display: flex
-
-	& > div
-		flex: 1
+//#codeInputs
+//	display: flex
+//
+//	& > div
+//		flex: 1
 
 #iframe
 	border-style: solid
