--- a/browserViews/index.pug
+++ b/browserViews/index.pug
@@ -19,6 +19,7 @@ block head-js
 
 
 block append head-css
+	link(rel='stylesheet', href='css/grid.css')
 	link(rel='stylesheet', href='css/index.css')
 
 block append head-js
