grid class ranaming

--- a/browserViews/css/grid.sass
+++ b/browserViews/css/grid.sass
@@ -15,7 +15,7 @@
 			.grid-#{$i}
 				grid-column-end: span $i
 
-			.grid-offset-#{$i}
+			.grid-start-#{$i}
 				grid-column-start: $i
 	@else
 		@media screen and (max-width: $max-width)
