fix compilation, add muicss

--- a/browserViews/css/index.sass
+++ b/browserViews/css/index.sass
@@ -1,3 +1,5 @@
+@import '../../node_modules/muicss/lib/sass/mui/colors'
+
 //#codeInputs
 //	display: flex
 //
@@ -8,7 +10,11 @@
 	box-sizing: border-box
 
 #iframe
+	background: rgba(255,255,255,0.2)
 	border-style: solid
 	border-color: rgba(0, 0, 0, 0.2)
 	height: 300px
 	width: 100%
+
+body
+	background-color: mui-color('black-alpha-87')
