--- a/browserViews/index.pug
+++ b/browserViews/index.pug
@@ -6,6 +6,7 @@ block head
 	meta(http-equiv="Content-Security-Policy", content="default-src 'none'; script-src 'self'; object-src 'none'; style-src 'self'; img-src 'self'; media-src 'self'; frame-src 'self'; font-src 'self'; connect-src 'none'")
 
 block head-css
+	link(rel='stylesheet', href='lib/muicss/css/mui-noglobals.css')
 	link(rel='stylesheet', href='lib/codemirror/lib/codemirror.css')
 	link(rel='stylesheet', href='lib/codemirror/theme/monokai.css')
 
@@ -19,6 +20,7 @@ block head-js
 
 
 block append head-css
+	link(rel='stylesheet', href='css/scrollbar.css')
 	link(rel='stylesheet', href='css/grid.css')
 	link(rel='stylesheet', href='css/index.css')
 
