update to electron 16, browserView js in module

--- a/browserViews/css/index.sass
+++ b/browserViews/css/index.sass
@@ -18,3 +18,7 @@
 
 body
 	background-color: mui-color('black-alpha-87')
+	color: mui-color('white-alpha-70')
+
+.mui-tabs__bar > li > a
+	color: inherit
