--- a/browserViews/_layout.pug
+++ b/browserViews/_layout.pug
@@ -11,8 +11,10 @@ html(lang='fr')
 
 	body
 		block body
+			block header
 			main
 				block main
+			block footer
 
 		block footer-css
 		block footer-js
