--- a/browserViews/css/index.sass
+++ b/browserViews/css/index.sass
@@ -1,3 +1,7 @@
+@import "reset.sass"
+@import "common.sass"
+@import "grid.sass"
+
 //#codeInputs
 //	display: flex
 //
@@ -13,3 +17,22 @@
 	border-color: rgba(0, 0, 0, 0.2)
 	height: 300px
 	width: 100%
+
+header button, header [role="button"]
+	flex: 1
+	height: 36px
+	min-width: 42px
+	max-width: 64px
+	padding: 0 8px
+	border: 0 none
+	border-radius: 1px
+	margin-left: 5px
+	font-weight: 700
+
+button, [role="button"]
+	padding: 0 8px
+	border: 0 none
+	border-radius: 1px
+	margin-left: 5px
+	min-height: 42px
+	font-weight: 700
