--- a/browserViews/index.pug
+++ b/browserViews/index.pug
@@ -21,7 +21,7 @@ block head-js
 
 block append head-css
 	link(rel='stylesheet', href='css/scrollbar.css')
-	link(rel='stylesheet', href='css/grid.css')
+	link(rel='stylesheet', href='css/fonts.css')
 	link(rel='stylesheet', href='css/index.css')
 
 block append head-js
