--- a/browserViews/css/theme/theme-light.sass
+++ b/browserViews/css/theme/theme-light.sass
@@ -9,8 +9,10 @@ footer
 	background-color: var(--bgLight1, hsl(0, 0%, 74%))
 
 header button,
+header label[for],
 header [role="button"],
 button,
+.button,
 input[type="number"],
 select,
 .panel-item,
