--- a/browserViews/css/_common.sass
+++ b/browserViews/css/_common.sass
@@ -3,7 +3,6 @@ body
 	padding: 1rem
 
 
-
 .h1, .h2, .h3, h1, h2, h3
 	margin-top: 20px
 	margin-bottom: 10px
@@ -16,6 +15,9 @@ p
 
 .inline-block
 	display: inline-block
+
+.hidden
+	display: none
 
 .w100
 	width: 100%
