--- a/browserViews/index.pug
+++ b/browserViews/index.pug
@@ -2,8 +2,10 @@ extends _layout
 
 
 
-block head
-	// HEAD
+block header
+	header
+		label.button(for='streamlink') Streamlink
+		label.button(for='codeTester') Code tester
 
 block head-css
 	link(rel='stylesheet', href='lib/codemirror/lib/codemirror.css')
