--- a/browserViews/index.pug
+++ b/browserViews/index.pug
@@ -4,8 +4,15 @@ extends _layout
 
 block header
 	header
-		label.button(for='streamlink') Streamlink
-		label.button(for='codeTester') Code tester
+		label.tab(for='streamlink')
+			i.material-icons play_circle_filled
+			span Streamlink
+		label.tab(for='codeTester')
+			i.material-icons code
+			span Code tester
+		label.tab(for='settings')
+			i.material-icons settings
+			span(data-translate-id="settings")
 
 block head-css
 	link(rel='stylesheet', href='lib/codemirror/lib/codemirror.css')
@@ -28,6 +35,8 @@ block append head-css
 
 block append head-js
 	script(src='index.js', type='module')
+	script(src='settings.js', type='module')
+	script(src='js/settings/settings.js', type='module')
 	script(src='js/translation-api.js', type='module')
 	script(src='js/theme/color.js', type='module')
 	script(src='js/theme/theme.js', type='module')
