--- a/browserViews/css/theme/input.sass
+++ b/browserViews/css/theme/input.sass
@@ -105,13 +105,18 @@ input[type='checkbox']
 input[type='radio']
 	margin: 3px 3px 3px 5px
 
+input[type='checkbox']:disabled::before,
+input[type='checkbox']:disabled:checked::before,
+input[type='radio']:disabled::before,
+input[type='radio']:disabled:checked::before
+	opacity: .5
+
 input[type='radio']::before,
 input[type='checkbox']::before
 	font-family: "Material Icons" /* stylelint-disable-line font-family-no-missing-generic-family-keyword */
 	font-size: 1.2rem
 	font-weight: normal
 	vertical-align: middle
-
 
 input[type='checkbox']::before
 	content: "check_box_outline_blank"
