--- a/browserViews/css/index.sass
+++ b/browserViews/css/index.sass
@@ -81,6 +81,12 @@ button,
 		justify-content: center
 		margin-bottom: 15px
 
+.pref-group,
+.pref-container
+	display: block
+	margin-top: 14px
+	margin-bottom: 14px
+
 main
 	grid-auto-rows: minmax(min-content, max-content)
 	padding: 1rem
