browserView main output

--- a/browserViews/css/index.sass
+++ b/browserViews/css/index.sass
@@ -111,12 +111,14 @@ main
 	padding: 1rem
 
 #main_input,
-#main_textarea_input
+#main_textarea_input,
+#main_textarea_output
 	min-width: 100%
 	margin-top: 0.3rem
 	max-width: 100%
 
-#main_textarea_input
+#main_textarea_input,
+#main_textarea_output
 	max-height: 50vh
 	min-height: 3.2rem
 
