settings add support path/paths setting type

--- a/browserViews/css/index.sass
+++ b/browserViews/css/index.sass
@@ -64,6 +64,10 @@ button,
 	min-height: 42px
 	font-weight: 700
 
+	&.small
+		line-height: 29px
+		min-height: 29px
+
 	&:first-child,
 	.hidden:first-child + &
 		margin-left: 0
