--- a/browserViews/index.pug
+++ b/browserViews/index.pug
@@ -13,6 +13,9 @@ block header
 		label.tab(for='settings')
 			i.material-icons settings
 			span(data-translate-id="settings") Settings
+		label.tab(for='infos')
+			i.material-icons dashboard
+			span(data-translate-id="infos_section") Infos
 
 block head-css
 	link(rel='stylesheet', href='lib/codemirror/lib/codemirror.css')
