chrome extension connected list

--- a/browserViews/css/index.sass
+++ b/browserViews/css/index.sass
@@ -30,6 +30,15 @@ header
 	position: sticky
 	top: 0
 
+.list-style-inside
+	list-style-position: inside
+
+.list-style-auto
+	list-style-type: auto
+
+.list-style-disc
+	list-style-type: disc
+
 button,
 label
 	cursor: pointer
