--- a/browserViews/css/index.sass
+++ b/browserViews/css/index.sass
@@ -137,3 +137,75 @@ main
 
 label[for='main_input']
 	margin-left: .6rem
+
+
+
+section.websites-data
+	margin-bottom: 8px
+
+section a.buttonItem
+	display: block
+	color: inherit
+	text-decoration: none
+
+section .buttonItem
+	font-size: 14px
+	justify-content: space-between
+	flex-direction: column
+	margin: 7px 0
+	min-height: 37px
+	padding: 7px 14px 7px 42px
+	position: relative
+	text-align: left
+
+section .buttonItem .ellipse
+	-webkit-line-clamp: 3
+	overflow: hidden
+	display: -webkit-box
+	-webkit-box-orient: vertical
+
+section .buttonItem.tabPageServerIp .title
+	-webkit-line-clamp: 1
+
+section .buttonItem .icon
+	font-size: 32px
+	left: 3px
+	position: absolute
+	top: 50%
+	transform: translateY(-50%)
+	width: 32px
+
+
+section .buttonItem .title
+	font-size: 1.1em
+	font-weight: 700
+
+section .buttonItem .title[data-count]::after
+	content: " (" attr(data-count) ")"
+
+
+section .websiteItem .websiteData .folder[data-folder-url]
+	color: inherit
+	margin-left: -19px
+	min-height: 25px
+	text-decoration: none
+
+	&::before
+		content: "open_in_browser"
+		/*noinspection CssNoGenericFontName*/
+		font-family: 'Material Icons' /* stylelint-disable-line font-family-no-missing-generic-family-keyword */
+		font-size: 1.5em
+
+section .websiteItem .websiteData
+	padding-left: 21px
+	font-size: 0.9em
+	display: flex
+	flex-direction: column
+
+section .websiteItem .websiteData .folder
+	display: flex
+	flex-direction: row
+	align-items: center
+
+section .websiteItem .websiteData .folder[data-folder-count]::after
+	content: ": "attr(data-folder-count)
