--- a/browserViews/css/fonts.sass
+++ b/browserViews/css/fonts.sass
@@ -1,3 +1,12 @@
+@import "../lib/fontsource-ubuntu/300.css"
+@import "../lib/fontsource-ubuntu/300-italic.css"
+@import "../lib/fontsource-ubuntu/400.css"
+@import "../lib/fontsource-ubuntu/400-italic.css"
+@import "../lib/fontsource-ubuntu/500.css"
+@import "../lib/fontsource-ubuntu/500-italic.css"
+@import "../lib/fontsource-ubuntu/700.css"
+@import "../lib/fontsource-ubuntu/700-italic.css"
+
 /* Self hosted font - https://google.github.io/material-design-icons/#icon-font-for-the-web */
 @font-face
 	font-family: 'Material Icons'
