--- a/browserViews/css/index.sass
+++ b/browserViews/css/index.sass
@@ -40,6 +40,9 @@ header
 .list-style-disc
 	list-style-type: disc
 
+.display-content
+	display: content
+
 button,
 label
 	cursor: pointer
@@ -136,13 +139,13 @@ main
 	max-height: 50vh
 	min-height: 3.2rem
 
+#main_textarea_output
+	min-height: 6.0rem
+
 label[for='main_input']
 	margin-left: .6rem
 
 
-
-section.websites-data
-	margin-bottom: 8px
 
 section a.buttonItem
 	display: block
