better input range

--- a/browserViews/css/theme/input.sass
+++ b/browserViews/css/theme/input.sass
@@ -14,10 +14,6 @@ input[type="number"]
 	appearance: textfield
 	width: 3em
 
-input[type='number']::-webkit-inner-spin-button,
-input[type='number']::-webkit-outer-spin-button
-	-webkit-appearance: none
-
 select
 	border: 1px solid #444
 	border-radius: 3px
@@ -32,49 +28,31 @@ select:hover option
 
 
 input[type='range']
-	-webkit-appearance: none
-	-moz-appearance: none
 	appearance: none
 	margin: 10px 0
 	background-color: transparent
 
-input[type='range'] ~ output::before
-	content: ''
-	display: inline-block
-	width: 0.4em
+	& ~ output::before
+		content: ''
+		display: inline-block
+		width: 0.4em
 
-input[type='range']::-webkit-slider-runnable-track
-	width: 300px
-	height: 5px
-	border: none
-	border-radius: 1px
+	&::-webkit-slider-runnable-track
+		width: 300px
+		height: 5px
+		border: none
+		border-radius: 1px
 
-input[type='range']::-webkit-slider-thumb
-	-webkit-appearance: none
-	border: none
-	height: 21px
-	width: 10px
-	border-radius: 1px
-	margin-top: -8px
+	&::-webkit-slider-thumb
+		-webkit-appearance: none
+		border: none
+		height: 21px
+		width: 10px
+		border-radius: 1px
+		margin-top: -8px
 
-input[type='range']::-moz-range-track
-	width: 300px
-	height: 5px
-	border: none
-	border-radius: 1px
-
-input[type='range']::-moz-range-thumb
-	border: none
-	height: 21px
-	width: 10px
-	border-radius: 1px
-
-input[type='range']:focus
-	outline: none
-
-input[type='range']:-moz-focusring
-	outline: 1px solid white
-	outline-offset: -1px
+	&:focus
+		outline: none
 
 
 
