--- a/browserViews/css/theme/input.sass
+++ b/browserViews/css/theme/input.sass
@@ -100,6 +100,9 @@ input[type='radio'] + label:not(.preference)::after
 	content: "\A"
 	white-space: pre
 
+textarea.auto-height
+	max-height: none
+
 input[disabled],
 input[readonly],
 textarea[disabled],
