--- a/templates/websitesData.twig
+++ b/templates/websitesData.twig
@@ -1,47 +1,40 @@
-<template>
-	<section class="websites-data grid no-r-gap">
-		<h1 class="grid-12">
-			Websites data
-		</h1>
-		<div class="grid-3" v-for="{websiteName: website, websiteData: data} in websitesData">
-			<a class="buttonItem websiteItem cursor" :href="data.href" target="_blank"
-			   :data-logged="data.logged" :data-website="website">
+<section class="websites-data grid no-r-gap">
+    <h1 class="grid-12">
+        Websites data
+    </h1>
+    {% for item in websitesData %}
+        {%- set website = item.websiteName -%}
+        {%- set data = item.websiteData -%}
+    <div class="grid-3">
+        <a class="buttonItem websiteItem cursor" href="{{ data.href }}" target="_blank"
+           data-logged="{{ data.logged }}" data-website="{{ website }}">
 
-				<img class="icon" :src="data.websiteIcon" alt="" />
+            <img class="icon" src="{{ data.websiteIcon }}" alt="" />
 
-				<div class="title" :data-count="data.logged ? data.count : ''">{{website}}</div>
-				<div class="websiteData">
-					<a class="folder" :href="folder.folderCount" target="_blank"
-					   v-if="data.logged && folder.folderUrl && folder.folderCount"
-					   v-for="[folderTitle, folder] in data.folders"
-					   :data-folder-count="folder.folderCount"
-					   :data-folder-url="folder.folderUrl">{{folderTitle}}</a>
+            <div class="title" data-count="{{ data.logged ? data.count : '' }}">{{website}}</div>
+            <div class="websiteData">
+                {% if data.logged and folder.folderUrl and folder.folderCount -%}
+                    {%- for folderData in data.folders -%}
+                        {% set folderTitle = folderData[0] %}
+                        {% set folder = folderData[1] %}
+                        <a class="folder" href="{{ folder.folderCount }}" target="_blank"
+                           data-folder-count="{{ folder.folderCount }}"
+                           data-folder-url="{{ folder.folderUrl }}">{{folderTitle}}</a>
+                    {%- endfor -%}
+                {%- endif %}
 
-					<span class="folder" :data-folder-count="folder.folderCount"
-					      v-if="data.logged && !folder.folderUrl"
-					      v-for="[folderTitle, folder] in data.folders">{{folderTitle}}</span>
+                {% if data.logged and not folder.folderUrl -%}
+                    {%- for folderData in data.folders -%}
+                        {% set folderTitle = folderData[0] %}
+                        {% set folder = folderData[1] %}
+                        <span class="folder" data-folder-count="{{ folder.folderCount }}">{{folderTitle}}</span>
+                    {%- endfor -%}
+                {%- endif %}
 
-					<span class="folder" data-translate-id="not_logged" v-if="!data.logged"></span>
-				</div>
-			</a>
-		</div>
-	</section>
-
-</template>
-
-<!--suppress ES6UnusedImports -->
-<script lang="ts">
-export default {
-	name: "websitesData",
-	data: function () {
-		return {}
-	},
-	props: [
-		"websitesData"
-	]
-}
-</script>
-
-<style scoped>
-
-</style>
+                {% if not data.logged -%}
+                <span class="folder" data-translate-id="not_logged" v-if="!data.logged"></span>
+                {%- endif %}
+            </div>
+        </a>
+    </div>{% endfor %}
+</section>
