fix display content

--- a/browserViews/css/index.sass
+++ b/browserViews/css/index.sass
@@ -40,8 +40,8 @@ header
 .list-style-disc
 	list-style-type: disc
 
-.display-content
-	display: content
+.display-contents
+	display: contents
 
 button,
 label
