--- a/browserViews/css/index.sass
+++ b/browserViews/css/index.sass
@@ -123,6 +123,9 @@ label.button
 	margin-top: 14px
 	margin-bottom: 14px
 
+.group-hidden
+	display: none
+
 main
 	grid-auto-rows: minmax(min-content, max-content)
 	padding: 1rem
