--- a/browserViews/variousInfos.twig
+++ b/browserViews/variousInfos.twig
@@ -20,3 +20,12 @@
 		{%- endfor -%}
 	</ul>
 {% endif %}
+
+{% if chromeNativeInstallersStates %}
+	<p>Chrome native installations :</p>
+	<ul class="list-style-inside list-style-disc">
+		{%- for browser, item in chromeNativeInstallersStates -%}
+			<li title="{{ item != false ? item.path : '' }}">{%- if item == false -%}❌{%- else -%}✅{%- endif %} {{ browser }}</li>
+		{%- endfor -%}
+	</ul>
+{% endif %}
